--- a/index.html
+++ b/index.html
@@ -110,34 +110,75 @@
             <p>这里收录了从伦敦圣乔治街到纽约东86街的所有珍贵记忆。无论是亚瑟的并购案、弗朗西斯的视觉美学，还是孩子们通向深空与地层的足迹，都被镌刻于此。</p>
         </section>
 
-        <section id="arthur" class="profile-page">
-            <div class="profile-header">
-                <h1>Arthur Kirkland</h1>
-                <span class="mbti-tag">ISTJ | 英国绅士</span>
-            </div>
-            <div class="info-grid">
-                <div class="info-box">
-                    <h3>基本资料</h3>
-                    <p><strong>出生日期：</strong>4月23日<br>
-                       <strong>出生地点：</strong>伦敦 · 切尔西 (夏洛特女王与切尔西医院)<br>
-                       <strong>国籍：</strong>英国</p>
-                </div>
-                <div class="info-box">
-                    <h3>教育背景</h3>
-                    <ul>
-                        <li>圣保罗公学 (男校)</li>
-                        <li>剑桥大学 法律系 (本科/硕士)</li>
-                        <li>哥伦比亚大学 法律系 J.S.D.</li>
-                    </ul>
-                </div>
-                <div class="info-box">
-                    <h3>职业履历</h3>
-                    <p><strong>当前职位：</strong>Kirkland & Ellis 律师事务所 · 私募股权并购经理<br>
-                       <strong>专业领域：</strong>商业法 / 企业并购 (Private Equity–led M&A)</p>
-                </div>
-            </div>
-        </section>
+      <section id="arthur" class="profile-page">
+    <div class="profile-header">
+        <h1>Arthur Kirkland</h1>
+        <span class="mbti-tag">ISTJ | 英国</span>
+    </div>
 
+    <div class="info-grid">
+        <div class="info-box">
+            <h3>基础身份</h3>
+            <ul>
+                <li><strong>全名：</strong>Arthur Kirkland</li>
+                <li><strong>生日：</strong>4月23日</li>
+                <li><strong>出生地：</strong>伦敦</li>
+                <li><strong>国籍：</strong>英国</li>
+                <li><strong>MBTI：</strong>ISTJ</li>
+            </ul>
+        </div>
+
+        <div class="info-box">
+            <h3>家庭关系</h3>
+            <ul>
+                <li><strong>伴侣：</strong><span class="relation-link" onclick="showSection('francis')">弗朗西斯·波诺弗瓦</span></li>
+                <li><strong>父亲：</strong>爱德温·柯克兰</li>
+                <li><strong>母亲：</strong>卡莲达·罗德里格斯</li>
+                <li><strong>子女：</strong><span class="relation-link" onclick="showSection('matthew')">马修·威廉姆斯</span>，<span class="relation-link" onclick="showSection('alfred')">阿尔弗雷德·F·琼斯</span></li>
+            </ul>
+        </div>
+
+        <div class="info-box" style="grid-column: span 2;">
+            <h3>学术履历</h3>
+            <ul>
+                <li><strong>基础教育：</strong>圣保罗公学</li>
+                <li><strong>本科/硕士：</strong>剑桥大学 · 人文社会科学学院 · 法律系</li>
+                <li><strong>博士 (J.S.D.)：</strong>哥伦比亚大学 · 法律系</li>
+                <li style="list-style: none; margin-top: 10px;">
+                    <span class="thesis"><strong>本科论文：</strong>《封闭型公司中公司董事的信义义务》</span>
+                    <span class="thesis"><strong>硕士论文：</strong>《私募股权交易中少数股东保护机制：英美法比较研究》</span>
+                    <span class="thesis"><strong>博士论文：</strong>《跨境私募股权并购中的监管套利与信义责任》</span>
+                </li>
+            </ul>
+        </div>
+
+        <div class="info-box" style="grid-column: span 2;">
+            <h3>职业生涯</h3>
+            <p><strong>实习经历：</strong></p>
+            <ul>
+                <li>Slaughter and May（伦敦）- Vacation Scheme Intern（公司法方向）</li>
+                <li>Linklaters（伦敦）- Summer Associate / Trainee（Private Equity & M&A）</li>
+                <li>UK Court of Appeal - 商业法 / 公司法方向法官助理</li>
+                <li>Cravath, Swaine & Moore LLP（纽约）- Summer Associate（Corporate / M&A）</li>
+                <li>U.S. Securities and Exchange Commission - Visiting Researcher / Legal Fellow（并购与市场监管）</li>
+            </ul>
+            <p style="margin-top: 15px;"><strong>正式工作：</strong>Kirkland & Ellis 律师事务所</p>
+            <ul>
+                <li><strong>职衔：</strong>私募股权并购经理</li>
+                <li><strong>专业领域：</strong>商业法、企业并购</li>
+            </ul>
+        </div>
+
+        <div class="info-box" style="grid-column: span 2;">
+            <h3>居住轨迹</h3>
+            <ul>
+                <li><strong>0-24岁：</strong>伦敦 · 皮姆利科区 · 圣乔治街</li>
+                <li><strong>24-28岁：</strong>纽约 · 晨边高地 · 阿姆斯特丹大道1080公寓16层</li>
+                <li><strong>28岁以后：</strong>纽约 · 上东城 · 东 86 街</li>
+            </ul>
+        </div>
+    </div>
+</section>
         <section id="francis" class="profile-page">
             <div class="profile-header">
                 <h1>Francis Bonnefoy</h1>
