--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <section id="home-page" class="active">
             <h1>柯克兰-波诺弗瓦家族录</h1>
             <p style="font-size: 1.1rem; color: #7f8c8d;">点击左侧名字查看每个人的专属生平档案。</p>
-            <p>这里收录了从伦敦圣乔治街到纽约东86街的所有珍贵记忆。无论是亚瑟的并购案、弗朗西斯的视觉美学，还是孩子们通向深空与地层的足迹，都被镌刻于此。</p>
+            <p>我要对你说什么，我们见面时？然而，我躺在这里，想象另一个世界的幸福</p>
         </section>
 
       <section id="arthur" class="profile-page">
@@ -179,34 +179,71 @@
         </div>
     </div>
 </section>
-        <section id="francis" class="profile-page">
-            <div class="profile-header">
-                <h1>Francis Bonnefoy</h1>
-                <span class="mbti-tag">ENFP | 艺术灵魂</span>
-            </div>
-            <div class="info-grid">
-                <div class="info-box">
-                    <h3>基本资料</h3>
-                    <p><strong>出生日期：</strong>7月14日<br>
-                       <strong>出生地点：</strong>巴黎 (乔治·杜皮蓬医院)<br>
-                       <strong>国籍：</strong>法国</p>
-                </div>
-                <div class="info-box">
-                    <h3>教育背景</h3>
-                    <ul>
-                        <li>巴黎国立高等美术学院 (视觉艺术与图像实践)
-                            <span class="thesis-title">毕业项目：《Corps habillé, corps regardé》</span></li>
-                        <li>哥伦比亚大学 艺术学院 MFA</li>
-                    </ul>
-                </div>
-                <div class="info-box">
-                    <h3>职业履历</h3>
-                    <p><strong>当前职位：</strong>Vogue 美国版 视觉主编<br>
-                       <strong>研究方向：</strong>纺织/时装语言 + 身体与权力的关系</p>
-                </div>
-            </div>
-        </section>
+       <section id="francis" class="profile-page">
+    <div class="profile-header">
+        <h1>Francis Bonnefoy</h1>
+        <span class="mbti-tag">ENFP | 法国</span>
+    </div>
 
+    <div class="info-grid">
+        <div class="info-box">
+            <h3>基础身份</h3>
+            <ul>
+                <li><strong>全名：</strong>Francis Bonnefoy</li>
+                <li><strong>生日：</strong>7月14日</li>
+                <li><strong>出生地：</strong>巴黎</li>
+                <li><strong>国籍：</strong>法国</li>
+                <li><strong>MBTI：</strong>ENFP</li>
+            </ul>
+        </div>
+
+        <div class="info-box">
+            <h3>家庭关系</h3>
+            <ul>
+                <li><strong>伴侣：</strong><span class="relation-link" onclick="showSection('arthur')">亚瑟·柯克兰</span></li>
+                <li><strong>父亲：</strong>弗洛朗·波诺弗瓦</li>
+                <li><strong>母亲：</strong>克洛艾·兰伯特</li>
+                <li><strong>子女：</strong><span class="relation-link" onclick="showSection('matthew')">马修·威廉姆斯</span>，<span class="relation-link" onclick="showSection('alfred')">阿尔弗雷德·F·琼斯</span></li>
+            </ul>
+        </div>
+
+        <div class="info-box" style="grid-column: span 2;">
+            <h3>学术履历</h3>
+            <ul>
+                <li><strong>基础教育：</strong>圣保罗公学</li>
+                <li><strong>本科：</strong>巴黎国立高等美术学院 Art plastique</li>
+                <li><strong>硕士：</strong>哥伦比亚大学·艺术学院·视觉艺术MFA</li>
+                <li style="list-style: none; margin-top: 10px;">
+                    <span class="thesis"><strong>本科毕业项目：</strong>Corps habillé, corps regardé（被穿着的身体，被观看的身体）</span>
+                    <span class="thesis"><strong>硕士毕业项目：</strong>纺织 / 时装语言＋ 身体与权力的关系</span>
+                </li>
+            </ul>
+        </div>
+
+        <div class="info-box" style="grid-column: span 2;">
+            <h3>职业生涯</h3>
+            <p><strong>实习经历：</strong></p>
+            <ul>
+                <li>巴黎设计中心-设计工作室学徒</li>
+                <li>Dior（巴黎）-初级设计师 / 工作室助理（Dior 高级定制线）</li>
+                <li>Cacharel-高定图腾手绘师</li>
+                <li>Calvin Klein（纽约）-男装成衣实习生</li>
+                <li>Vogue US-视觉编辑实习</li>
+            </ul>
+            <p style="margin-top: 15px;"><strong>正式工作：</strong>vogue美国版-视觉主编</p>
+        </div>
+
+        <div class="info-box" style="grid-column: span 2;">
+            <h3>居住轨迹</h3>
+            <ul>
+                <li><strong>0~1岁居住地：</strong>巴黎·15区·法伦宾街</li>
+                <li><strong>1~24岁居住地：</strong>伦敦·皮姆利科区·圣乔治街</li>
+                <li><strong>24岁~28岁居住地：</strong>纽约·晨边高地·阿姆斯特丹大道1080公寓16层</li>
+                <li><strong>28岁后居住地：</strong>纽约·上东城·东86街</li>
+            </ul>
+        </div>
+    </div>
+</section>
         <section id="matthew" class="profile-page">
             <div class="profile-header">
                 <h1>Matthew Williams</h1>
