--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
        <section id="family-view" class="profile-page">
     <div class="profile-header">
         <h1>家族关系视图</h1>
-        <p style="color: #7f8c8d;">点击角色查看视角。红色实线：爱人关系 [cite: 2026-01-14]；橙色虚线：亲属关系。</p>
+        <p style="color: #7f8c8d;">点击角色查看视角。红色实线：爱人关系 ；橙色虚线：亲属关系。</p>
     </div>
 
     <div id="network-container" style="position: relative; width: 100%; height: 1000px; background: #fff; border-radius: 15px; border: 1px solid #eee; overflow: auto;">
@@ -263,48 +263,48 @@
 
        <section id="francis" class="profile-page">
     <div class="profile-header">
-        <h1>Francis Bonnefoy [cite: 2026-01-20]</h1>
-        <span class="mbti-tag">ENFP [cite: 2026-01-20] | 法国 [cite: 2026-01-20]</span>
+        <h1>Francis Bonnefoy </h1>
+        <span class="mbti-tag">ENFP  | 法国</span>
     </div>
 
     <div class="info-grid">
         <div class="info-box">
             <h3>基础身份</h3>
             <ul>
-                <li><strong>全名：</strong>Francis Bonnefoy [cite: 2026-01-20]</li>
-                <li><strong>生日：</strong>7月14日 [cite: 2026-01-20]</li>
-                <li><strong>出生地：</strong>巴黎 [cite: 2026-01-20]</li>
-                <li><strong>国籍：</strong>法国 [cite: 2026-01-20]</li>
-                <li><strong>MBTI：</strong>ENFP [cite: 2026-01-20]</li>
+                <li><strong>全名：</strong>Francis Bonnefoy</li>
+                <li><strong>生日：</strong>7月14日 </li>
+                <li><strong>出生地：</strong>巴黎</li>
+                <li><strong>国籍：</strong>法国 </li>
+                <li><strong>MBTI：</strong>ENFP </li>
             </ul>
         </div>
 
         <div class="info-box">
             <h3>家庭关系</h3>
             <ul>
-                <li><strong>伴侣：</strong><span class="relation-link" onclick="showSection('arthur')">亚瑟·柯克兰</span> [cite: 2026-01-14]</li>
-                <li><strong>父亲：</strong>弗洛朗·波诺弗瓦 [cite: 2026-01-22]</li>
-                <li><strong>母亲：</strong>克洛艾·兰伯特 [cite: 2026-01-22]</li>
-                <li><strong>子女：</strong><span class="relation-link" onclick="showSection('matthew')">马修·威廉姆斯</span>，<span class="relation-link" onclick="showSection('alfred')">阿尔弗雷德·F·琼斯</span> [cite: 2026-01-14]</li>
+                <li><strong>伴侣：</strong><span class="relation-link" onclick="showSection('arthur')">亚瑟·柯克兰</span> </li>
+                <li><strong>父亲：</strong>弗洛朗·波诺弗瓦</li>
+                <li><strong>母亲：</strong>克洛艾·兰伯特 </li>
+                <li><strong>子女：</strong><span class="relation-link" onclick="showSection('matthew')">马修·威廉姆斯</span>，<span class="relation-link" onclick="showSection('alfred')">阿尔弗雷德·F·琼斯</span> </li>
             </ul>
         </div>
 
         <div class="info-box" style="grid-column: span 2;">
             <h3>学术履历</h3>
             <ul>
-                <li><strong>基础教育：</strong>圣保罗公学 [cite: 2026-01-20]</li>
-                <li><strong>本科：</strong>巴黎国立高等美术学院 Art plastique [cite: 2026-01-20]</li>
-                <li><strong>硕士：</strong>哥伦比亚大学·艺术学院·视觉艺术MFA [cite: 2026-01-20]</li>
+                <li><strong>基础教育：</strong>圣保罗公学</li>
+                <li><strong>本科：</strong>巴黎国立高等美术学院 Art plastique </li>
+                <li><strong>硕士：</strong>哥伦比亚大学·艺术学院·视觉艺术MFA</li>
                 <li style="list-style: none; margin-top: 10px;">
-                    <span class="thesis"><strong>本科毕业项目：</strong>Corps habillé, corps regardé（被穿着的身体，被观看的身体） [cite: 2026-01-20]</span>
-                    <span class="thesis"><strong>硕士毕业项目：</strong>纺织 / 时装语言＋ 身体与权力的关系 [cite: 2026-01-20]</span>
+                    <span class="thesis"><strong>本科毕业项目：</strong>Corps habillé, corps regardé（被穿着的身体，被观看的身体）</span>
+                    <span class="thesis"><strong>硕士毕业项目：</strong>纺织 / 时装语言＋ 身体与权力的关系</span>
                 </li>
             </ul>
         </div>
 
         <div class="info-box" style="grid-column: span 2;">
             <h3>职业生涯</h3>
-            <p><strong>实习经历：</strong> [cite: 2026-01-20]</p>
+            <p><strong>实习经历：</strong></p>
             <ul>
                 <li>巴黎设计中心 - 设计工作室学徒</li>
                 <li>Dior（巴黎）- 初级设计师 / 工作室助理（Dior 高级定制线）</li>
@@ -312,16 +312,16 @@
                 <li>Calvin Klein（纽约）- 男装成衣实习生</li>
                 <li>Vogue US - 视觉编辑实习</li>
             </ul>
-            <p style="margin-top: 15px;"><strong>正式工作：</strong>vogue美国版 - 视觉主编 [cite: 2026-01-20]</p>
+            <p style="margin-top: 15px;"><strong>正式工作：</strong>vogue美国版 - 视觉主编</p>
         </div>
 
         <div class="info-box" style="grid-column: span 2;">
             <h3>居住轨迹</h3>
             <ul>
-                <li><strong>0~1岁：</strong>巴黎·15区·法伦宾街 [cite: 2026-01-20]</li>
-                <li><strong>1~24岁：</strong>伦敦·皮姆利科区·圣乔治街 [cite: 2026-01-20]</li>
-                <li><strong>24岁~28岁：</strong>纽约·晨边高地·阿姆斯特丹大道1080公寓16层 [cite: 2026-01-20]</li>
-                <li><strong>28岁后：</strong>纽约·上东城·东86街 [cite: 2026-01-20]</li>
+                <li><strong>0~1岁：</strong>巴黎·15区·法伦宾街</li>
+                <li><strong>1~24岁：</strong>伦敦·皮姆利科区·圣乔治街 </li>
+                <li><strong>24岁~28岁：</strong>纽约·晨边高地·阿姆斯特丹大道1080公寓16层</li>
+                <li><strong>28岁后：</strong>纽约·上东城·东86街</li>
             </ul>
         </div>
     </div>
@@ -329,54 +329,54 @@
 
        <section id="matthew" class="profile-page">
     <div class="profile-header">
-        <h1>Matthew Williams [cite: 2026-01-19]</h1>
-        <span class="mbti-tag">INFJ [cite: 2026-01-19] | 温柔学者</span>
+        <h1>Matthew Williams </h1>
+        <span class="mbti-tag">INFJ | 温柔学者</span>
     </div>
 
     <div class="info-grid">
         <div class="info-box">
             <h3>基础身份</h3>
             <ul>
-                <li><strong>全名：</strong>Matthew Williams [cite: 2026-01-19]</li>
+                <li><strong>全名：</strong>Matthew Williams</li>
                 <li><strong>生日：</strong>7月1日</li>
                 <li><strong>出生地：</strong>纽约</li>
-                <li><strong>国籍：</strong>加拿大，美国 [cite: 2026-01-19]</li>
-                <li><strong>MBTI：</strong>INFJ [cite: 2026-01-19]</li>
+                <li><strong>国籍：</strong>加拿大，美国</li>
+                <li><strong>MBTI：</strong>INFJ</li>
             </ul>
         </div>
 
         <div class="info-box">
             <h3>家庭关系</h3>
             <ul>
-                <li><strong>爱人：</strong><span class="relation-link" onclick="showSection('alfred')">阿尔弗雷德·F·琼斯</span> [cite: 2026-01-14]</li>
-                <li><strong>父亲：</strong><span class="relation-link" onclick="showSection('francis')">弗朗西斯·波诺弗瓦</span>，<span class="relation-link" onclick="showSection('arthur')">亚瑟·柯克兰</span> [cite: 2026-01-14]</li>
-                <li><strong>宠物：</strong>枫糖饼 (Maple) [cite: 2026-01-20]</li>
+                <li><strong>爱人：</strong><span class="relation-link" onclick="showSection('alfred')">阿尔弗雷德·F·琼斯</span></li>
+                <li><strong>父亲：</strong><span class="relation-link" onclick="showSection('francis')">弗朗西斯·波诺弗瓦</span>，<span class="relation-link" onclick="showSection('arthur')">亚瑟·柯克兰</span></li>
+                <li><strong>宠物：</strong>枫糖饼 (Maple)</li>
             </ul>
         </div>
 
         <div class="info-box" style="grid-column: span 2;">
             <h3>学术履历</h3>
             <ul>
-                <li><strong>基础教育：</strong>卡尔霍恩学校 - 三一学校 [cite: 2026-01-19]</li>
-                <li><strong>本科/硕士/博士：</strong>哈佛大学 · 地球与行星科学 [cite: 2026-01-19]</li>
-                <li><strong>博士后：</strong>哥伦比亚大学 · 拉蒙特多尔蒂地球观测站（LDEO） [cite: 2026-01-19]</li>
+                <li><strong>基础教育：</strong>卡尔霍恩学校 - 三一学校 </li>
+                <li><strong>本科/硕士/博士：</strong>哈佛大学 · 地球与行星科学</li>
+                <li><strong>博士后：</strong>哥伦比亚大学 · 拉蒙特多尔蒂地球观测站（LDEO） </li>
                 <li style="list-style: none; margin-top: 10px;">
-                    <span class="thesis"><strong>本科论文：</strong>《地壳变形过程的综合地球物理解释》 [cite: 2026-01-19]</span>
-                    <span class="thesis"><strong>硕士论文：</strong>《沉积盆地热史与埋藏史建模及其对油气系统的影响》 [cite: 2026-01-19]</span>
-                    <span class="thesis"><strong>博士论文：</strong>《地下能源资源评估的综合盆地与油气系统建模》 [cite: 2026-01-19]</span>
+                    <span class="thesis"><strong>本科论文：</strong>《地壳变形过程的综合地球物理解释》</span>
+                    <span class="thesis"><strong>硕士论文：</strong>《沉积盆地热史与埋藏史建模及其对油气系统的影响》</span>
+                    <span class="thesis"><strong>博士论文：</strong>《地下能源资源评估的综合盆地与油气系统建模》</span>
                 </li>
             </ul>
         </div>
 
         <div class="info-box" style="grid-column: span 2;">
             <h3>职业生涯</h3>
-            <p><strong>实习经历：</strong> [cite: 2026-01-19]</p>
+            <p><strong>实习经历：</strong> </p>
             <ul>
                 <li>美国地质调查局 (USGS) - 地球科学实习生（地层建模地震 / 构造数据分析）</li>
                 <li>ExxonMobil - 地下评估实习生（储层刻画）</li>
                 <li>Schlumberger - 油藏 / 地层评估实习生</li>
             </ul>
-            <p style="margin-top: 15px;"><strong>正式工作：</strong> [cite: 2026-01-19]</p>
+            <p style="margin-top: 15px;"><strong>正式工作：</strong> </p>
             <ul>
                 <li><strong>ExxonMobil：</strong>地下地球系统与储层刻画部门</li>
                 <li><strong>哥伦比亚大学：</strong>地球与环境科学系（DEES）助理教授 / 研究科学家</li>
